welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: not found: value dies1
	else return dies1 +dies2
                    ^